# znake-casual

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package.json  update-engine.sh  version.yml
RoninEngine/resources/data/loader/: textures.conf
RoninEngine/src/ronin/: Application.cpp  Gizmos.cpp  Gizmos.h  ResourceManager.cpp
Sources/: Application.cpp  Application.h  Atlas.cpp  Atlas.h  Behaviour.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Color.h  Component.cpp  Component.h  Controls.cpp  Controls.h  Font.cpp  Font.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  Gizmos.cpp  Gizmos.h  LevelEntity.cpp  LevelEntity.h  Light.cpp  Light.h  MainMenu.cpp  MainMenu.h  Mathf.cpp  Mathf.h  NavMesh.cpp  NavMesh.h  Object.cpp  Object.h  ObjectParser.cpp  ObjectParser.h  Particle.cpp  Particle.h  Paths.cpp  (+40 more)
Sources/extension/: linked_list.h  queue_list.h
cmake/: functions.cmake
resources/data/levels/: level1.map
resources/data/loader/: player-sprites.conf  textures.conf
resources/data/locale/en_US/: main-menu-en.txt
resources/data/locale/ru_RU/: locale_levels.txt  locale_mainmenu.txt  locale_weapons.lang
resources/data/music/: copyright.txt
source/: main.cpp  snakeplayer.cpp  snakeplayer.h
source/levels/: appleeat.cpp  appleeat.h  gamelevel.cpp  gamelevel.h  terrain2deditor.cpp  terrain2deditor.cpp.hide  terrain2deditor.h  terrain2deditor.h.hide  testlevel.cpp  testlevel.cpp.hide  testlevel.h  testlevel.h.hide
src/ronin/: Application.cpp  Application.h  Atlas.cpp  Atlas.h  Behaviour.h  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Color.cpp  Color.h  Component.cpp  Component.h  Controls.cpp  Controls.h  Font.cpp  Font.h  GameObject.cpp  GameObject.h  Gizmos.cpp  Gizmos.h  Level.cpp  Level.h  LevelEntity.cpp  LevelEntity.h  Light.cpp  Light.h  Mathf.cpp  Mathf.h  NavMesh.cpp  NavMesh.h  Object.cpp  Object.h  ObjectParser.cpp  Particle.cpp  Paths.cpp  Paths.h  Physics2D.cpp  Physics2D.h  Player.cpp  (+33 more)
